// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`table (isCI = false) > handles null and undefined values 1`] = `
[
  "┌────────────┬────────────┐
│ <bold>Name      </bold> │ <bold>Value     </bold> │
├────────────┼────────────┤
│ Alice      │            │
│            │ Test       │
│ Bob        │            │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > handles wide characters (CJK) 1`] = `
[
  "┌────────────┬──────────────────────┐
│ <bold>名前      </bold> │ <bold>説明                </bold> │
├────────────┼──────────────────────┤
│ 太郎       │ 日本語のテスト       │
│ 花子       │ もう一つのテスト     │
└────────────┴──────────────────────┘
",
]
`;

exports[`table (isCI = false) > renders basic table with data 1`] = `
[
  "┌───────┬─────────────────┬───────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>  Age</bold> │
├───────┼─────────────────┼───────┤
│ 1     │ Alice           │    30 │
│ 2     │ Bob             │    25 │
│ 3     │ Charlie         │    35 │
└───────┴─────────────────┴───────┘
",
]
`;

exports[`table (isCI = false) > renders empty table 1`] = `
[
  "┌────────────┬────────────┐
│ <bold>Name      </bold> │ <bold>Value     </bold> │
├────────────┼────────────┤
<dim>│        (no data)        │</bold>
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders table with ascii border style 1`] = `
[
  "+------------+------------+
| <bold>Name      </bold> | <bold>Value     </bold> |
+------------+------------+
| Test       | 123        |
+------------+------------+
",
]
`;

exports[`table (isCI = false) > renders table with custom formatters 1`] = `
[
  "┌────────────┬────────────┬────────────┐
│ <bold>Name      </bold> │ <bold>     Score</bold> │ <bold>Status    </bold> │
├────────────┼────────────┼────────────┤
│ Alice      │        95% │ ✓          │
│ Bob        │        78% │ ✗          │
└────────────┴────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders table with custom styles 1`] = `
[
  "┌────────────┬────────────┐
│ <bold>Name      </bold> │ <bold>Status    </bold> │
├────────────┼────────────┤
│ Alice      │ <green>active    </fg> │
│ Bob        │ <red>inactive  </fg> │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders table with double border style 1`] = `
[
  "╔════════════╦════════════╗
║ <bold>Name      </bold> ║ <bold>Value     </bold> ║
╠════════════╬════════════╣
║ Test       ║ 123        ║
╚════════════╩════════════╝
",
]
`;

exports[`table (isCI = false) > renders table with no borders 1`] = `
[
  "<bold>Name      </bold> <bold>Value     </bold>
Test       123       
",
]
`;

exports[`table (isCI = false) > renders table with rounded border style 1`] = `
[
  "╭────────────┬────────────╮
│ <bold>Name      </bold> │ <bold>Value     </bold> │
├────────────┼────────────┤
│ Test       │ 123        │
╰────────────┴────────────╯
",
]
`;

exports[`table (isCI = false) > renders table with single border style 1`] = `
[
  "┌────────────┬────────────┐
│ <bold>Name      </bold> │ <bold>Value     </bold> │
├────────────┼────────────┤
│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders table with text alignment 1`] = `
[
  "┌────────────┬────────────┬────────────┐
│ <bold>Left      </bold> │ <bold>  Center  </bold> │ <bold>     Right</bold> │
├────────────┼────────────┼────────────┤
│ L          │     C      │          R │
└────────────┴────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders with auto width 1`] = `
[
  "┌───────┬───────────────────────┐
│ <bold>Short</bold> │ <bold>Long                 </bold> │
├───────┼───────────────────────┤
│ A     │ This is a longer text │
│ B     │ Short                 │
└───────┴───────────────────────┘
",
]
`;

exports[`table (isCI = false) > renders with content width 1`] = `
[
  "┌──────┬─────────────┐
│ <bold>Name</bold> │ <bold>Description</bold> │
├──────┼─────────────┤
│ A    │ First       │
│ BB   │ Second item │
│ CCC  │ Third       │
└──────┴─────────────┘
",
]
`;

exports[`table (isCI = false) > renders with header styling 1`] = `
[
  "┌────────────┬────────────┐
│ <cyan>Name      </fg> │ <cyan>Value     </fg> │
├────────────┼────────────┤
│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > renders without header 1`] = `
[
  "│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = false) > truncates long text with ellipsis 1`] = `
[
  "┌─────────────────┐
│ <bold>Text           </bold> │
├─────────────────┤
│ This is a ve... │
└─────────────────┘
",
]
`;

exports[`table (isCI = true) > handles null and undefined values 1`] = `
[
  "┌────────────┬────────────┐
│ <bold>Name      </bold> │ <bold>Value     </bold> │
├────────────┼────────────┤
│ Alice      │            │
│            │ Test       │
│ Bob        │            │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > handles wide characters (CJK) 1`] = `
[
  "┌────────────┬──────────────────────┐
│ <bold>名前      </bold> │ <bold>説明                </bold> │
├────────────┼──────────────────────┤
│ 太郎       │ 日本語のテスト       │
│ 花子       │ もう一つのテスト     │
└────────────┴──────────────────────┘
",
]
`;

exports[`table (isCI = true) > renders basic table with data 1`] = `
[
  "┌───────┬─────────────────┬───────┐
│ <bold>ID   </bold> │ <bold>Name           </bold> │ <bold>  Age</bold> │
├───────┼─────────────────┼───────┤
│ 1     │ Alice           │    30 │
│ 2     │ Bob             │    25 │
│ 3     │ Charlie         │    35 │
└───────┴─────────────────┴───────┘
",
]
`;

exports[`table (isCI = true) > renders empty table 1`] = `
[
  "┌────────────┬────────────┐
│ <bold>Name      </bold> │ <bold>Value     </bold> │
├────────────┼────────────┤
<dim>│        (no data)        │</bold>
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders table with ascii border style 1`] = `
[
  "+------------+------------+
| <bold>Name      </bold> | <bold>Value     </bold> |
+------------+------------+
| Test       | 123        |
+------------+------------+
",
]
`;

exports[`table (isCI = true) > renders table with custom formatters 1`] = `
[
  "┌────────────┬────────────┬────────────┐
│ <bold>Name      </bold> │ <bold>     Score</bold> │ <bold>Status    </bold> │
├────────────┼────────────┼────────────┤
│ Alice      │        95% │ ✓          │
│ Bob        │        78% │ ✗          │
└────────────┴────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders table with custom styles 1`] = `
[
  "┌────────────┬────────────┐
│ <bold>Name      </bold> │ <bold>Status    </bold> │
├────────────┼────────────┤
│ Alice      │ <green>active    </fg> │
│ Bob        │ <red>inactive  </fg> │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders table with double border style 1`] = `
[
  "╔════════════╦════════════╗
║ <bold>Name      </bold> ║ <bold>Value     </bold> ║
╠════════════╬════════════╣
║ Test       ║ 123        ║
╚════════════╩════════════╝
",
]
`;

exports[`table (isCI = true) > renders table with no borders 1`] = `
[
  "<bold>Name      </bold> <bold>Value     </bold>
Test       123       
",
]
`;

exports[`table (isCI = true) > renders table with rounded border style 1`] = `
[
  "╭────────────┬────────────╮
│ <bold>Name      </bold> │ <bold>Value     </bold> │
├────────────┼────────────┤
│ Test       │ 123        │
╰────────────┴────────────╯
",
]
`;

exports[`table (isCI = true) > renders table with single border style 1`] = `
[
  "┌────────────┬────────────┐
│ <bold>Name      </bold> │ <bold>Value     </bold> │
├────────────┼────────────┤
│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders table with text alignment 1`] = `
[
  "┌────────────┬────────────┬────────────┐
│ <bold>Left      </bold> │ <bold>  Center  </bold> │ <bold>     Right</bold> │
├────────────┼────────────┼────────────┤
│ L          │     C      │          R │
└────────────┴────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders with auto width 1`] = `
[
  "┌───────┬───────────────────────┐
│ <bold>Short</bold> │ <bold>Long                 </bold> │
├───────┼───────────────────────┤
│ A     │ This is a longer text │
│ B     │ Short                 │
└───────┴───────────────────────┘
",
]
`;

exports[`table (isCI = true) > renders with content width 1`] = `
[
  "┌──────┬─────────────┐
│ <bold>Name</bold> │ <bold>Description</bold> │
├──────┼─────────────┤
│ A    │ First       │
│ BB   │ Second item │
│ CCC  │ Third       │
└──────┴─────────────┘
",
]
`;

exports[`table (isCI = true) > renders with header styling 1`] = `
[
  "┌────────────┬────────────┐
│ <cyan>Name      </fg> │ <cyan>Value     </fg> │
├────────────┼────────────┤
│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > renders without header 1`] = `
[
  "│ Test       │ 123        │
└────────────┴────────────┘
",
]
`;

exports[`table (isCI = true) > truncates long text with ellipsis 1`] = `
[
  "┌─────────────────┐
│ <bold>Text           </bold> │
├─────────────────┤
│ This is a ve... │
└─────────────────┘
",
]
`;
